# robot_capsule_generator

./: CMakeLists.txt  README.md
python/: robot_capsule_urdf
src/: compute_default_collisions.cpp
